install/kubernetes/hami/hami.yaml
---
# Source: hami/templates/device-plugin/monitorservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: hami-device-plugin-monitor
  namespace: kube-system
  labels:
    app.kubernetes.io/component: hami-device-plugin
    helm.sh/chart: hami-2.9.0
    app.kubernetes.io/name: hami
    app.kubernetes.io/instance: hami
    app.kubernetes.io/version: "2.9.0"
    app.kubernetes.io/managed-by: Helm
spec:
  type: NodePort  # Default type is NodePort
  ports:
    - name: monitorport
      port: 31992  # Default HTTP port is 31992
      targetPort: 9394  # If type is NodePort, set nodePort
      nodePort: 31992
      protocol: TCP
  selector:
    app.kubernetes.io/component: hami-device-plugin
    app.kubernetes.io/name: hami
    app.kubernetes.io/instance: hami
---
# Source: hami/templates/scheduler/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hami-scheduler
  namespace: kube-system
  labels:
    app.kubernetes.io/component: hami-scheduler
    helm.sh/chart: hami-2.9.0
    app.kubernetes.io/name: hami
    app.kubernetes.io/instance: hami
    app.kubernetes.io/version: "2.9.0"
    app.kubernetes.io/managed-by: Helm
spec:
  type: NodePort  # Default type is NodePort
  ports:
    - name: http
      port: 443  # Default HTTP port is 443
      targetPort: 443  # If type is NodePort, set nodePort
      nodePort: 31998
      protocol: TCP
    - name: monitor
      port: 31993  # Default monitoring port is 31993
      targetPort: 9395  # If type is NodePort, set nodePort
      nodePort: 31993
      protocol: TCP
  selector:
    app.kubernetes.io/component: hami-scheduler
    hami.io/scheduler-role: leader
    app.kubernetes.io/name: hami
    app.kubernetes.io/instance: hami
---
# Source: hami/templates/device-plugin/daemonsetnvidia.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: hami-device-plugin
  namespace: kube-system
  labels:
    app.kubernetes.io/component: hami-device-plugin
    helm.sh/chart: hami-2.9.0
    app.kubernetes.io/name: hami
    app.kubernetes.io/instance: hami
    app.kubernetes.io/version: "2.9.0"
    app.kubernetes.io/managed-by: Helm
spec:
  updateStrategy:
    rollingUpdate:
      maxUnavailable: 1
    type: RollingUpdate
  selector:
    matchLabels:
      app.kubernetes.io/component: hami-device-plugin
      app.kubernetes.io/name: hami
      app.kubernetes.io/instance: hami
  template:
    metadata:
      labels:
        app.kubernetes.io/component: hami-device-plugin
        hami.io/webhook: ignore
        app.kubernetes.io/name: hami
        app.kubernetes.io/instance: hami
      annotations:
        checksum/hami-scheduler-config: 316019fff77108b5e101e044da809e69c84d492bf077e32f201dab1ef466e272
        checksum/hami-scheduler-device-config: 9242231333a60aad16061d1716e849eccf96e243b3fa2a35062071d79018d364
    spec:
      serviceAccountName: hami-device-plugin
      priorityClassName: system-node-critical
      hostPID: true
      hostNetwork: false
      
      containers:
        - name: device-plugin
          image: docker.io/projecthami/hami:v2.9.0
          imagePullPolicy: IfNotPresent
          lifecycle:
            postStart:
              exec:
                command: ["/bin/sh","-c", "/k8s-vgpu/bin/vgpu-init.sh /usr/local/vgpu/"]
          command:
            - nvidia-device-plugin
            - --config-file=/device-config.yaml
            - --mig-strategy=none
            - --disable-core-limit=false
            - -v=4
          securityContext:
            privileged: true
            allowPrivilegeEscalation: true
            capabilities:
              drop: ["ALL"]
              add: ["SYS_ADMIN"]
          resources:
            {}
          volumeMounts:
            - name: device-plugin
              mountPath: /var/lib/kubelet/device-plugins
            - name: lib
              mountPath: /usr/local/vgpu
            - name: usrbin
              mountPath: /usrbin
            - name: deviceconfig
              mountPath: /config
            - name: hosttmp
              mountPath: /tmp
            - name: device-config
              mountPath: /device-config.yaml
              subPath: device-config.yaml
            - name: cdi-root
              mountPath: /var/run/cdi
            - name: deviceconfig
              mountPath: /k8s-vgpu/lib/nvidia/ld.so.preload
              subPath: ld.so.preload
              readOnly: true
        - name: vgpu-monitor
          image: docker.io/projecthami/hami:v2.9.0
          imagePullPolicy: IfNotPresent
          command:
            - "vGPUmonitor"
            - -v=4
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
              add: ["SYS_ADMIN"]
          resources:
            {}
          volumeMounts:
            - name: ctrs
              mountPath: /usr/local/vgpu/containers
            - name: dockers
              mountPath: /run/docker
            - name: containerds
              mountPath: /run/containerd
            - name: sysinfo
              mountPath: /sysinfo
            - name: hostvar
              mountPath: /hostvar
            - name: hosttmp
              mountPath: /tmp
      volumes:
        - name: ctrs
          hostPath:
            path: /usr/local/vgpu/containers
        - name: hosttmp
          hostPath:
            path: /tmp
        - name: dockers
          hostPath:
            path: /run/docker
        - name: containerds
          hostPath:
            path: /run/containerd
        - name: device-plugin
          hostPath:
            path: /var/lib/kubelet/device-plugins
        - name: lib
          hostPath:
            path: /usr/local/vgpu
        - name: cdi-root
          hostPath:
            path: /var/run/cdi
            type: DirectoryOrCreate
        - name: usrbin
          hostPath:
            path: /usr/bin
        - name: sysinfo
          hostPath:
            path: /sys
        - name: hostvar
          hostPath:
            path: /var
        - name: deviceconfig
          configMap:
            name: hami-device-plugin
        - name: device-config
          configMap:
            name: hami-scheduler-device
      nodeSelector: 
        gpu-plugin: "hami"
---
# Source: hami/templates/scheduler/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hami-scheduler
  namespace: kube-system
  labels:
    app.kubernetes.io/component: hami-scheduler
    helm.sh/chart: hami-2.9.0
    app.kubernetes.io/name: hami
    app.kubernetes.io/instance: hami
    app.kubernetes.io/version: "2.9.0"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: hami-scheduler
      app.kubernetes.io/name: hami
      app.kubernetes.io/instance: hami
  template:
    metadata:
      labels:
        app.kubernetes.io/component: hami-scheduler
        app.kubernetes.io/name: hami
        app.kubernetes.io/instance: hami
        hami.io/webhook: ignore
      annotations:
        checksum/hami-scheduler-config: 316019fff77108b5e101e044da809e69c84d492bf077e32f201dab1ef466e272
        checksum/hami-scheduler-device-config: 9242231333a60aad16061d1716e849eccf96e243b3fa2a35062071d79018d364
    spec:
      serviceAccountName: hami-scheduler
      priorityClassName: system-node-critical
      
      containers:
        - name: kube-scheduler
          image: registry.cn-hangzhou.aliyuncs.com/google_containers/kube-scheduler:v1.30.0
          imagePullPolicy: IfNotPresent
          command:
            - kube-scheduler
            - --config=/config/config.yaml
            - -v=4
          resources:
            {}
          volumeMounts:
            - name: scheduler-config
              mountPath: /config
        - name: vgpu-scheduler-extender
          image: docker.io/projecthami/hami:v2.9.0
          imagePullPolicy: IfNotPresent
          command:
            - scheduler
            - --http_bind=0.0.0.0:443
            - --cert_file=/tls/tls.crt
            - --key_file=/tls/tls.key
            - --scheduler-name=hami-scheduler
            - --metrics-bind-address=:9395
            - --node-scheduler-policy=binpack
            - --gpu-scheduler-policy=spread
            - --force-overwrite-default-scheduler=true
            - --device-config-file=/device-config.yaml
            - --leader-elect=true
            - --leader-elect-resource-name=hami-scheduler
            - --leader-elect-resource-namespace=kube-system
            - --debug
            - -v=4
          ports:
            - name: https
              containerPort: 443
              protocol: TCP
            - name: metrics
              containerPort: 9395
              protocol: TCP
          resources:
            {}
          volumeMounts:
            - name: device-config
              mountPath: /device-config.yaml
              subPath: device-config.yaml
            - name: tls-config
              mountPath: /tls
          readinessProbe:
            httpGet:
              path: /readyz
              port: https
              scheme: HTTPS
            initialDelaySeconds: 10
            periodSeconds: 10
            failureThreshold: 3
            timeoutSeconds: 5
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
          - labelSelector:
              matchExpressions:
              - key: app.kubernetes.io/component
                operator: In
                values:
                - hami-scheduler
            topologyKey: "kubernetes.io/hostname"
      volumes:
        - name: tls-config
          secret:
            secretName: hami-scheduler-tls
        - name: scheduler-config
          configMap:
            name: hami-scheduler
        - name: device-config
          configMap:
            name: hami-scheduler-device
---
# Source: hami/templates/scheduler/webhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: hami-webhook
webhooks:
  - admissionReviewVersions:
    - v1beta1
    clientConfig:
      service:
        name: hami-scheduler
        namespace: kube-system
        path: /webhook
        port: 443
    failurePolicy: Ignore
    matchPolicy: Equivalent
    name: vgpu.hami.io
    namespaceSelector:
      matchExpressions:
      - key: hami.io/webhook
        operator: NotIn
        values:
        - ignore
    objectSelector:
      matchExpressions:
      - key: hami.io/webhook
        operator: NotIn
        values:
        - ignore
    reinvocationPolicy: Never
    rules:
      - apiGroups:
          - ""
        apiVersions:
          - v1
        operations:
          - CREATE
        resources:
          - pods
        scope: '*'
    sideEffects: None
    timeoutSeconds: 10
